Update : Visitors' Book for Servlet

--- a/visitorsbook1_servlet/WebContent/index.html
+++ b/visitorsbook1_servlet/WebContent/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div align="center">
-		<h3>Visitors' Book !!!</h3>
+		<h3>Visitors' Book with Servlet!!!</h3>
 		<a href="/visitorsbook1_servlet/visitorsbook/write.html">글쓰기</a><br> 
 		<a href="/visitorsbook1_servlet/articlelist">글목록</a>
 	</div>
