Update : Visitor's Book for Servlet

--- a/visitorsbook1_servlet/WebContent/visitorsbook/list.html
+++ b/visitorsbook1_servlet/WebContent/visitorsbook/list.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Visitor - 글 목록</title>
+    <title>Visitor's Book - 글 목록</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
@@ -31,12 +31,12 @@
             <table class="table table-active text-left">
                 <tbody>
                     <tr class="table-info">
-                        <td>작성자 : visitor</td>
-                        <td class="text-right">작성일 : 2025-02-28 16:30:12</td>
+                        <td>작성자 : atimaby28</td>
+                        <td class="text-right">작성일 : 2024-02-28 16:30:12</td>
                     </tr>
                     <tr>
                         <td colspan="2" class="table-danger">
-                            <strong>10. 안녕하세요!!!</strong>
+                            <strong>1. 안녕하세요!!!</strong>
                         </td>
                     </tr>
                     <tr>
