--- a/visitorsbook1_servlet/WebContent/index.html
+++ b/visitorsbook1_servlet/WebContent/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Visitor</title>
+	<title>Visitor's Book</title>
 </head>
 <body>
 	<div align="center">
-		<h3>Visitors' Book with Servlet!!!</h3>
+		<h3>Atimaby visitor's Book with Servlet!!!</h3>
 		<a href="/visitorsbook1_servlet/visitorsbook/write.html">글쓰기</a><br> 
 		<a href="/visitorsbook1_servlet/articlelist">글목록</a>
 	</div>
